--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,8 @@
 	<h1 style="text-align:center;">Bem-vindo(a) a minha página!</h1>
 
 	<p style="text-align:center;">Olá, meu nome é Leandro de Matos, eu sou estudante de tecnologia.</p>
+	
+	<p style="text-align:center;">Teste GitHub</p>
 
 	<center>
 		<a href="https://www.linkedin.com/in/leandro-matos-pereira/" target="_blank">
